--- a/index.html
+++ b/index.html
@@ -1,20 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Homepage</title>
     <link rel="stylesheet" href="screen.css">
-  </head>
-  <body>
-    <h1>Home</h1>
-    <nav>
-      <ul>
-        <li><a href="index.html" class="active">Home</a></li>
-        <li><a href="about.html">About</a></li>
-      </ul>
-    </nav>
-    <script src="index.js"></script>
-  </body>
+</head>
+<body>
+    <h1>Click Image to learn more</h1>
+    <div class="images">
+        <img src="Images/earth.png" alt="Earth" onclick="window.location.href='earth.html'">
+        <img src="Images/moon.png" alt="Moon" onclick="window.location.href='moon.html'">
+    </div>
+</body>
 </html>
